<resources>
    <string name="app_name">JobJo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Radio Group-->
    <string name="rdo_manager">مدیر</string>
    <string name="rdo_worker">کارجو</string>
    <string name="rdo_broker">کارفرما</string>
    <string name="rdo_employer">کارگزار</string>

    <!--String Login and SignUp User-->
    <string name="action_sign_in_short">ثبت</string>
    <string name="email">ایمیل</string>
    <string name="email_phone">ایمیل یا شماره تلفن همراه</string>
    <string name="minimum_password">رمز کوتاه است،حداقل 6 حرف وارد کنید!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">تغییر ایمیل</string>
    <string name="change_password">تغییر رمز</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">پاک کردن حساب</string>
    <string name="new_pass">رمز جدید</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">ورود</string>
    <string name="hint_email">ایمیل</string>
    <string name="hint_username">نام کاربری</string>
    <string name="hint_fullname">نام کامل</string>
    <string name="hint_password">رمز</string>
    <string name="hint_password_confirm">تکرار رمز</string>
    <string name="hint_name">نام کامل</string>
    <string name="btn_login">ورود</string>
    <string name="btn_signup">ثبت نام</string>
    <string name="btn_link_to_register">ایجاد یک حساب کاربری؟</string>
    <string name="btn_link_to_login">حساب دارم،ورود به حساب!</string>
    <string name="title_activity_reset_password">تغییر رمز</string>
    <string name="btn_forgot_password">رمز خود را فراموش کردم؟</string>
    <string name="btn_reset_password">تغییر رمز</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">ارسال</string>
    <string name="btn_remove">خذف</string>
    <string name="btn_sign_out">خروج</string>
    <string name="lbl_forgot_password">فراموشی رمز؟</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="title_profile">پروفایل</string>
    <string name="title_users">کاربران</string>
    <string name="title_users2">آماده به کار</string>
    <string name="title_category">دسته بندی</string>
    <string name="title_home">خانه</string>
    <string name="title_job_ad">آگهی</string>
    <string name="title_job_ad2">آگهی استخدامی من</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="btn_logout">خروج</string>
    <string name="title_nav_message">پیام ها</string>
    <string name="title_search">جستجو</string>
    <string name="title_add">درج</string>
    <string name="title_post">پست</string>
    <string name="title_interview">مصاحبه</string>
    <string name="str_comment">نظر</string>
    <string name="str_apply">درخواست کنندگان</string>
    <string name="srt_apply_job">درخواست</string>
    <string name="str_share">اشتراک</string>
    <string name="str_tilte_skill">دانش تخصصی و مهارت</string>
    <string name="str_title_work_experience">سوابق کاری</string>
    <string name="str_title_info_person">اطلاعات شخصی</string>
    <string name="str_title_gender">جنسیت:</string>
    <string name="str_title_age">سن:</string>
    <string name="str_title_married">متاهل/مجرد:</string>
    <string name="str_title_edu">میزان تحصیلات:</string>
    <string name="str_title_school">مدرسه/دانشگاه:</string>
    <string name="str_title_telephon">تلفن:</string>
    <string name="str_title_city">شهر:</string>
    <string name="str_title_address">آدرس:</string>
    <string name="str_splash_goal">آینده را اینجا بساز</string>
    <string name="str_splash_version">نسخه 1.0-alpha</string>
    <string name="select_image">انتخاب عکس</string>
    <string name="rationale_read_storage">مجوز خواندن از حافظه لازم است.</string>
    <string name="str_hint_search">شغل مورد نظر را تایپ کنید</string>
    <string name="str_hint_address_work">آدرس محل شغل:</string>
    <string name="str_hint_name_work">نام شغل:</string>
    <string name="str_introduce_work">معرفی فرصت شغلی</string>
    <string name="str_desc_work">شرح شغل و وظایف</string>
    <string name="str_military_service">خدمت سربازی:</string>
    <string name="str_title_skill_job">شرایط احراز شغل</string>
    <string name="str_hint_language">زبان:</string>
    <string name="str_hint_software">نرم افزار:</string>
    <string name="str_hint_skill">دانش تخصصی و مهارت های مورد نیاز:</string>
    <string name="str_tilte_edu">تحصیلات:</string>
    <string name="str_title_desc_job">شرح شغل و وظایف</string>
    <string name="str_work_experience">سابقه کاری:</string>
    <string name="str_edit">ویرایش</string>
    <string name="str_delete">حذف</string>
    <string name="srt_apply_post">درخواست کنندگان</string>
    <string name="str_btn_job_requested">کارگزاران</string>
    <string name="str_btn_introduced">کارجویان</string>
    <string name="str_message">پیام</string>
    <string name="str_hint_desc">شرح</string>
    <string name="str_chat">چت</string>
    <string name="str_title_not_connection">اتصال به اینترنت قطع می باشد.</string>
    <string name="str_try">دوباره تلاش کنید</string>
</resources>
