<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home"/>

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search"
        android:title="@string/title_search"/>

    <item
        android:id="@+id/navigation_post"
        android:icon="@drawable/ic_add_circle"
        android:title="@string/title_post"/>

    <item
        android:id="@+id/navigation_category"
        android:icon="@drawable/ic_category"
        android:title="@string/title_category"/>

    <item
        android:id="@+id/navigation_interview"
        android:icon="@drawable/ic_message"
        android:title="@string/title_interview"/>
</menu>
