<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    
    <LinearLayout
        android:id="@+id/postJobApply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toStartOf="@+id/postJobEdit"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imgPostJobApply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_apply"/>

        <TextView
            android:id="@+id/txtPostJobApply"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/margin_4"
            android:text="@string/srt_apply_post"
            android:textSize="@dimen/text_sheet_size_small_14"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/postJobEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toStartOf="@+id/postJobDelete"
        app:layout_constraintStart_toEndOf="@+id/postJobApply">

        <ImageView
            android:id="@+id/imgPostJobEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_edit"/>

        <TextView
            android:id="@+id/txtPostJobEdit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/margin_4"
            android:text="@string/str_edit"
            android:textSize="@dimen/text_sheet_size_small_14"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/postJobDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/postJobEdit">

        <ImageView
            android:id="@+id/imgPostJobDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_delete"/>

        <TextView
            android:id="@+id/txtPostJobDelete"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/margin_4"
            android:text="@string/str_delete"
            android:textSize="@dimen/text_sheet_size_small_14"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>